# P.Web-2.7

./: config.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6de534cd82e2_init.py  caafff05c6f1_init.py  f072ecfb6b29_init.py  f8beaba7873b_init.py  ff5016b4d877_init.py
database/: db.py  models.py
seeds/: seed_groups.py  seed_marks.py  seed_students.py  seed_subjects.py  seed_teachers.py
