[tool.poetry]
name = "p-web-2-7"
version = "0.1.0"
description = ""
authors = ["Hlushchenko"]
readme = "README.md"
packages = [{include = "p"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.2"
sqlalchemy = "^1.4.46"
black = "^22.12.0"
psycopg2-binary = "^2.9.5"
faker = "^16.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
